--- a/SailScores.Web/Views/Race/Create.cshtml
+++ b/SailScores.Web/Views/Race/Create.cshtml
@@ -10,7 +10,7 @@
 
 <hr />
 <div class="row">
-    <form asp-action="Create">
+    <form id="raceform" asp-action="Create">
             <input type="hidden" id="clubId" asp-for="ClubId" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
