--- a/SailScores.Web/Views/Race/Edit.cshtml
+++ b/SailScores.Web/Views/Race/Edit.cshtml
@@ -1,17 +1,16 @@
 ﻿@model SailScores.Web.Models.SailScores.RaceWithOptionsViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit Race";
     Layout = "~/Views/Shared/_ClubLayout.cshtml";
 }
 
-<h4>Adding a new race</h4>
-
-
+<h4>Update a race</h4>
 <hr />
 <div class="row">
-    <form id="raceform" asp-action="Create">
+    <form id="raceform" asp-action="Edit">
         <input type="hidden" id="clubId" asp-for="ClubId" />
+        <input type="hidden" id="Id" asp-for="Id" />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
             <label asp-for="Name" class="control-label">Name<em>&ensp;Optional</em></label>
@@ -78,11 +77,27 @@
                         }
                     </select>
                 </li>
+                @foreach (var score in Model.Scores.OrderBy(s => s.Place).ThenBy(s => s.Code))
+                {
+                    <li id="@score.CompetitorId" data-competitorid="@score.CompetitorId" class="list-group-item">
+                        <span class="badge badge-secondary badge-pill race-place"></span>
+                        <span class="sail-number">@score.Competitor.SailNumber</span>
+                        <span class="competitor-name h5">@score.Competitor.Name</span>
+                        <div class="float-right pl-3"><span class="fas fa-arrows-alt-v"></span></div>
+                        <select class="float-right select-code" onchange="window.SailScores.calculatePlaces()">
+                            <option>No Code</option>
+                            @foreach (var code in Model.ScoreCodeOptions)
+                            {
+                                <option selected="@(score.Code == code.Name)">@code.Name</option>
+                            }
+                        </select>
+                    </li>
+                }
             </ul>
         </div>
 
         <div class="form-group">
-            <input type="submit" value="Create" class="btn btn-default" />
+            <input type="submit" value="Save" class="btn btn-default" />
         </div>
 
         <div>
@@ -92,6 +107,7 @@
         </div>
     </form>
 </div>
+<hr />
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script src="~/js/raceEditor.build.js"></script>
@@ -99,10 +115,9 @@
     <script src="~/vendor/devbridge-autocomplete/jquery.autocomplete.js"></script>
     <link href="~/vendor/dragula/dragula.css" rel="stylesheet" />
 
-
     <script>
-        
-    var scoreCodes = @Html.Raw(Json.Serialize(Model.ScoreCodeOptions));
+        var scoreCodes = @Html.Raw(Json.Serialize(Model.ScoreCodeOptions));
+        window.SailScores.init()
     </script>
 
 }
