--- a/SailScores.Web/Views/Shared/_ClubLayout.cshtml
+++ b/SailScores.Web/Views/Shared/_ClubLayout.cshtml
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
+    <meta name="google" content="notranslate" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
     <link rel="apple-touch-icon" sizes="57x57" href="~/images/favicon/apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="114x114" href="~/images/favicon/apple-touch-icon-114x114.png">
