Buttons and auth are better

--- a/SailScores.Web/Views/BoatClass/Delete.cshtml
+++ b/SailScores.Web/Views/BoatClass/Delete.cshtml
@@ -28,7 +28,7 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="hidden" asp-for="ClubId" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
+        <input type="submit" value="Delete" class="btn btn-primary" /> |
         <a asp-controller="Admin"
            asp-action="Edit"
            asp-fragment="classes">Back to List</a>
