--- a/SailScores.Web/Views/Race/Edit.cshtml
+++ b/SailScores.Web/Views/Race/Edit.cshtml
@@ -60,7 +60,7 @@
 
         <div>
             Add result: <input id="newCompetitor" type="text" />
-            <input type="button" value="Add Competitor" class="btn btn-default" /><br />
+            <input type="button" value="Add Competitor" class="btn btn-primary" /><br />
         </div>
         <div class="container">
             <ul class="list-group col-12" id="results">
@@ -97,7 +97,7 @@
         </div>
 
         <div class="form-group">
-            <input type="submit" value="Save" class="btn btn-default" />
+            <input type="submit" value="Save" class="btn btn-primary" />
         </div>
 
         <div>
