--- a/SailScores.Web/Views/Competitor/Create.cshtml
+++ b/SailScores.Web/Views/Competitor/Create.cshtml
@@ -52,7 +52,7 @@
                 <span asp-validation-for="BoatClassId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
