--- a/SailScores.Web/Views/Fleet/Create.cshtml
+++ b/SailScores.Web/Views/Fleet/Create.cshtml
@@ -62,7 +62,7 @@
                 <span asp-validation-for="CompetitorIds" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
