--- a/SailScores.Web/Views/Race/Create.cshtml
+++ b/SailScores.Web/Views/Race/Create.cshtml
@@ -61,7 +61,7 @@
 
         <div>
             Add result: <input id="newCompetitor" type="text" />
-            <input type="button" value="Add Competitor" class="btn btn-default" /><br />
+            <input type="button" value="Add Competitor" class="btn btn-primary" /><br />
         </div>
         <div class="container">
             <ul class="list-group col-12" id="results">
@@ -82,7 +82,7 @@
         </div>
 
         <div class="form-group">
-            <input type="submit" value="Create" class="btn btn-default" />
+            <input type="submit" value="Create" class="btn btn-primary" />
         </div>
 
         <div>
