--- a/SailScores.Web/Views/Race/Delete.cshtml
+++ b/SailScores.Web/Views/Race/Delete.cshtml
@@ -33,7 +33,7 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="hidden" asp-for="ClubId" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
+        <input type="submit" value="Delete" class="btn btn-primary" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
