--- a/SailScores.Web/Views/Season/Create.cshtml
+++ b/SailScores.Web/Views/Season/Create.cshtml
@@ -29,7 +29,7 @@
                 <span asp-validation-for="End" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
