--- a/SailScores.Web/Views/Season/Delete.cshtml
+++ b/SailScores.Web/Views/Season/Delete.cshtml
@@ -35,7 +35,7 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="hidden" asp-for="ClubId" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
+        <input type="submit" value="Delete" class="btn btn-primary" /> |
         <a asp-controller="Admin"
            asp-action="Edit"
            asp-fragment="seasons">Cancel</a>
