--- a/SailScores.Web/Views/Season/Edit.cshtml
+++ b/SailScores.Web/Views/Season/Edit.cshtml
@@ -31,7 +31,7 @@
                 <span asp-validation-for="End" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
