News page added

--- a/SailScores.Web/Views/Home/About.cshtml
+++ b/SailScores.Web/Views/Home/About.cshtml
@@ -3,7 +3,7 @@
 }
 
 
-<h1>Sailing scoring kept simple.</h1>
+<h3>Sailing scoring kept simple.</h3>
 <p>
     Sailscores is built around the idea that publishing sail race
     scores should be simple. It should be simple enough that the
@@ -21,3 +21,11 @@ Planned features include:
     <li>Support for overlapping series. (Races can be included in multiple series.)</li>
     <li>Result trend reporting: Are your races growing?</li>
 </ul>
+
+
+<h3>Contact Info</h3>
+Sailscores is written and maintained by Jamie Fraser, <a href="mailto:jamie@widernets.com">jamie@widernets.com</a>, 
+<address>
+    <a href="mailto:info@sailscores.com">info@sailscores.com</a><br />
+</address>
+</h2>
