--- a/SailScores.Web/Views/Home/Index.cshtml
+++ b/SailScores.Web/Views/Home/Index.cshtml
@@ -7,13 +7,14 @@
 <hr class="my-4">
 <div class="row">
     <div class="col-md-6 order-md-first order-last">
-        <h4>Planned features</h4>
+        <h4>Sailscores features</h4>
         <ul>
-            <li>Quick result entry, especially on mobile devices.</li>
-            <li>Integration with social media, such as automatic result posting to Twitter.</li>
-            <li>Import and Export to integrate with existing scoring software.</li>
+            <li>Fast, simple result entry using the web.</li>
+            <li>Series and clubs have easy to remember direct links to pages.</li>
             <li>Support for overlapping series. (Races can be included in multiple series.)</li>
-            <li>Result trend reporting: Are your races growing?</li>
+            <li>Available results import from SailWave.</li>
+            <li>Open-source, volunteer-driven.</li>
+            <li>Club landing page can include links to home page or results on other systems.</li>
         </ul>
     </div>
     <div class="col-md-6">
