--- a/SailScores.Web/Views/Shared/_Layout.cshtml
+++ b/SailScores.Web/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
         <div class="navbar-nav-scroll">
             <ul class="navbar-nav flex-row">
                 <li class="nav-item"><a asp-area="" asp-controller="Home" asp-action="About" class="nav-link">About</a></li>
-                <li class="nav-item"><a asp-area="" asp-controller="Home" asp-action="Contact" class="nav-link">Contact</a></li>
+                <li class="nav-item"><a asp-area="" asp-controller="Home" asp-action="News" class="nav-link">News</a></li>
             </ul>
         </div>
     </header>
