--- a/SailScores.Web/Views/Home/About.cshtml
+++ b/SailScores.Web/Views/Home/About.cshtml
@@ -11,20 +11,34 @@
     got scores, competitors and clubs should be able to review scores
     in many ways, from many devices, viewing trends and specifics.
 </p>
-
-
+<br />
+<h3>Future</h3>
 Planned features include:
 <ul>
-    <li>Quick result entry, especially on mobile devices.</li>
     <li>Integration with social media, such as automatic result posting to Twitter.</li>
     <li>Import and Export to integrate with existing scoring software.</li>
-    <li>Support for overlapping series. (Races can be included in multiple series.)</li>
     <li>Result trend reporting: Are your races growing?</li>
+    <li><s>Quick result entry, especially on mobile devices.</s> <b>Complete, Q1 2019</b></li>
+    <li><s>Support for overlapping series. (Races can be included in multiple series.)</s> <b>Complete, Q1 2019</b></li>
 </ul>
+<br />
+<h3>You can use it</h3>
+<p>
+    SailScores is open-source software. The code is available at
+    <a href="https://github.com/jbfraser1/SailScores">https://github.com/jbfraser1/SailScores</a>.
+    You are welcome to run your own instance of this on your own server(s). I'll provide
+    support as time allows. <b>But even easier:</b> this site can also host your club's scores. Contact us at any of
+    the email addresses below for more information.
+</p>
+<br />
+<h3>Feedback</h3>
+<p>
+    Please send feed back! Use the email addresses below, reach out on Twitter @@SailScores or via Github. 
+</p>
 
-
+<br />
 <h3>Contact Info</h3>
-Sailscores is written and maintained by Jamie Fraser, <a href="mailto:jamie@widernets.com">jamie@widernets.com</a>, 
+Sailscores is written and maintained by Jamie Fraser, <a href="mailto:jamie@widernets.com">jamie@widernets.com</a>,
 <address>
     <a href="mailto:info@sailscores.com">info@sailscores.com</a><br />
 </address>
