--- a/SailScores.Web/Views/Home/About.cshtml
+++ b/SailScores.Web/Views/Home/About.cshtml
@@ -27,8 +27,10 @@ Planned features include:
     SailScores is open-source software. The code is available at
     <a href="https://github.com/jbfraser1/SailScores">https://github.com/jbfraser1/SailScores</a>.
     You are welcome to run your own instance of this on your own server(s). I'll provide
-    support as time allows. <b>But even easier:</b> this site can also host your club's scores. Contact us at any of
-    the email addresses below for more information.
+    support as time allows. <b>But even easier:</b> this site can also host your club's scores.
+    Contact us at any of the email addresses below for more information. This is currently a free
+    option and we hope to keep it that way. (Sailscores.com is currently hosted on a low-cost plan at
+    winhost.com.)
 </p>
 <br />
 <h3>Feedback</h3>
