--- a/SailScores.Web/Views/Home/Index.cshtml
+++ b/SailScores.Web/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
             <li>Fast, simple result entry using the web.</li>
             <li>Series and clubs have easy to remember direct links to pages.</li>
             <li>Support for overlapping series. (Races can be included in multiple series.)</li>
-            <li>Available results import from SailWave.</li>
+            <li>Options available to import results from SailWave.</li>
             <li>Open-source, volunteer-driven.</li>
             <li>Club landing page can include links to home page or results on other systems.</li>
         </ul>
