--- a/SailScores.Web/Views/Fleet/Edit.cshtml
+++ b/SailScores.Web/Views/Fleet/Edit.cshtml
@@ -65,15 +65,13 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
+                <a asp-controller="Admin"
+                   asp-action="Index"
+                   asp-fragment="fleets"
+                   class="btn btn-outline-primary">Cancel</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-controller="Admin"
-       asp-action="Edit"
-       asp-fragment="fleets">Back to List</a>
 </div>
 
 <script type="text/javascript">
