--- a/SailScores.Web/Views/Race/Create.cshtml
+++ b/SailScores.Web/Views/Race/Create.cshtml
@@ -83,12 +83,10 @@
 
         <div class="form-group">
             <input type="submit" value="Create" class="btn btn-primary" />
-        </div>
-
-        <div>
             <a asp-controller="Admin"
-               asp-action="Edit"
-               asp-fragment="races">Back to List</a>
+               asp-action="Index"
+               asp-fragment="races"
+               class="btn btn-outline-primary">Cancel</a>
         </div>
     </form>
 </div>
