--- a/SailScores.Web/Views/Competitor/Delete.cshtml
+++ b/SailScores.Web/Views/Competitor/Delete.cshtml
@@ -53,9 +53,10 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="hidden" asp-for="ClubId" />
-        <input type="submit" value="Delete" class="btn btn-primary" /> |
+        <input type="submit" value="Delete" class="btn btn-primary" />
         <a asp-controller="Admin"
-           asp-action="Edit"
-           asp-fragment="competitors">Cancel</a>
+           asp-action="Index"
+           asp-fragment="competitors"
+           class="btn btn-outline-primary">Cancel</a>
     </form>
 </div>
