--- a/SailScores.Web/Views/Race/Delete.cshtml
+++ b/SailScores.Web/Views/Race/Delete.cshtml
@@ -33,7 +33,10 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="hidden" asp-for="ClubId" />
-        <input type="submit" value="Delete" class="btn btn-primary" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-primary" />
+        <a asp-controller="Admin"
+           asp-action="Index"
+           asp-fragment="races"
+           class="btn btn-outline-primary">Cancel</a>
     </form>
 </div>
