--- a/SailScores.Web/Views/Race/Edit.cshtml
+++ b/SailScores.Web/Views/Race/Edit.cshtml
@@ -98,12 +98,10 @@
 
         <div class="form-group">
             <input type="submit" value="Save" class="btn btn-primary" />
-        </div>
-
-        <div>
             <a asp-controller="Admin"
-               asp-action="Edit"
-               asp-fragment="races">Back to List</a>
+               asp-action="Index"
+               asp-fragment="races"
+               class="btn btn-outline-primary">Cancel</a>
         </div>
     </form>
 </div>
