--- a/SailScores.Web/Views/Series/Delete.cshtml
+++ b/SailScores.Web/Views/Series/Delete.cshtml
@@ -31,7 +31,8 @@
         <input type="hidden" asp-for="ClubId" />
         <input type="submit" value="Delete" class="btn btn-primary" /> |
         <a asp-controller="Admin"
-           asp-action="Edit"
-           asp-fragment="series">Cancel</a>
+           asp-action="Index"
+           asp-fragment="series"
+           class="btn btn-outline-primary">Cancel</a>
     </form>
 </div>
